# AFP-V2

./: .gitignore  Makefile  Procfile  README.md  nixpacks.toml  railway.json
backend/: example.env  manage.py  pyproject.toml
backend/accounts/: adapters.py  admin.py  models.py  serializers.py  signals.py  urls.py
backend/accounts/migrations/: 0001_initial.py
backend/afp_v2/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/docs/: gmail-oauth-popup-implementation.md
frontend/: .env.example  nixpacks.toml  package-lock.json  package.json  railway.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: auth.ts
tasks/: prd-finanzas-personales-ai.md  prd-frontend-pwa.md  tasks-prd-finanzas-personales-ai.md  tasks-prd-frontend-pwa.md
